--- a/languages/understrap.pot
+++ b/languages/understrap.pot
@@ -3,18 +3,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/_s\n"
-"POT-Creation-Date: 2018-06-17 17:56+0000\n"
+"POT-Creation-Date: 2019-03-08 15:29+0100\n"
 "POT-Revision-Date: Mon Jul 04 2016 09:13:18 GMT+0200 (CEST)\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: \n"
-"Language: \n"
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Generator: Loco https://localise.biz/\n"
+"X-Generator: Poedit 2.2.1\n"
 "X-Poedit-KeywordsList: _:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;"
 "__:1;_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;"
 "_x:1,2c;_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;"
@@ -24,25 +23,24 @@ msgstr ""
 "X-Poedit-SearchPath-0: footer.php\n"
 "X-Poedit-SearchPath-1: header.php\n"
 "X-Poedit-SearchPath-2: index.php\n"
-"X-Poedit-SearchPath-3: statichero.php\n"
-"X-Poedit-SearchPath-4: 404.php\n"
-"X-Poedit-SearchPath-5: archive.php\n"
-"X-Poedit-SearchPath-6: search.php\n"
-"X-Poedit-SearchPath-7: sticky.php\n"
-"X-Poedit-SearchPath-8: single.php\n"
-"X-Poedit-SearchPath-9: sidebar.php\n"
-"X-Poedit-SearchPath-10: comment-form.php\n"
-"X-Poedit-SearchPath-11: comments.php\n"
-"X-Poedit-SearchPath-12: content-none.php\n"
-"X-Poedit-SearchPath-13: content-page.php\n"
-"X-Poedit-SearchPath-14: content-search.php\n"
-"X-Poedit-SearchPath-15: content-single.php\n"
-"X-Poedit-SearchPath-16: content.php\n"
-"X-Poedit-SearchPath-17: hero.php\n"
-"X-Poedit-SearchPath-18: page.php\n"
-"X-Poedit-SearchPath-19: functions.php\n"
-"X-Poedit-SearchPath-20: page-templates\n"
-"X-Poedit-SearchPath-21: inc"
+"X-Poedit-SearchPath-3: 404.php\n"
+"X-Poedit-SearchPath-4: archive.php\n"
+"X-Poedit-SearchPath-5: search.php\n"
+"X-Poedit-SearchPath-6: sticky.php\n"
+"X-Poedit-SearchPath-7: single.php\n"
+"X-Poedit-SearchPath-8: sidebar.php\n"
+"X-Poedit-SearchPath-9: comment-form.php\n"
+"X-Poedit-SearchPath-10: comments.php\n"
+"X-Poedit-SearchPath-11: content-none.php\n"
+"X-Poedit-SearchPath-12: content-page.php\n"
+"X-Poedit-SearchPath-13: content-search.php\n"
+"X-Poedit-SearchPath-14: content-single.php\n"
+"X-Poedit-SearchPath-15: content.php\n"
+"X-Poedit-SearchPath-16: page.php\n"
+"X-Poedit-SearchPath-17: functions.php\n"
+"X-Poedit-SearchPath-18: page-templates\n"
+"X-Poedit-SearchPath-19: inc\n"
+"X-Poedit-SearchPath-20: inc/widgets\n"
 
 #: search.php:29
 #, php-format
@@ -398,342 +396,6 @@ msgstr ""
 msgid "Choose how many columns to use"
 msgstr ""
 
-#: woocommerce/cart/proceed-to-checkout-button.php:27
-msgid "Proceed to Checkout"
-msgstr ""
-
-#: woocommerce/cart/mini-cart.php:49 woocommerce/cart/cart.php:60
-msgid "Remove this item"
-msgstr ""
-
-#: woocommerce/cart/mini-cart.php:72
-msgid "No products in the cart."
-msgstr ""
-
-#: woocommerce/cart/mini-cart.php:80
-msgid "Subtotal"
-msgstr ""
-
-#: woocommerce/cart/mini-cart.php:85
-msgid "View Cart"
-msgstr ""
-
-#: woocommerce/cart/mini-cart.php:86
-msgid "Checkout"
-msgstr ""
-
-#: woocommerce/cart/cart-empty.php:28
-msgid "Your cart is currently empty."
-msgstr ""
-
-#: woocommerce/cart/cart-empty.php:36
-msgid "Return To Shop"
-msgstr ""
-
-#: woocommerce/cart/cart.php:36 woocommerce/cart/cart.php:79
-#: woocommerce/checkout/form-pay.php:29
-msgid "Product"
-msgstr ""
-
-#: woocommerce/cart/cart.php:37 woocommerce/cart/cart.php:97
-msgid "Price"
-msgstr ""
-
-#: woocommerce/cart/cart.php:38 woocommerce/cart/cart.php:103
-msgid "Quantity"
-msgstr ""
-
-#: woocommerce/cart/cart.php:39 woocommerce/cart/cart.php:120
-#: woocommerce/myaccount/my-orders.php:16
-msgid "Total"
-msgstr ""
-
-#: woocommerce/cart/cart.php:92
-msgid "Available on backorder"
-msgstr ""
-
-#: woocommerce/cart/cart.php:138
-msgid "Coupon:"
-msgstr ""
-
-#: woocommerce/cart/cart.php:138 woocommerce/checkout/form-coupon.php:36
-msgid "Coupon code"
-msgstr ""
-
-#: woocommerce/cart/cart.php:138 woocommerce/checkout/form-coupon.php:40
-msgid "Apply Coupon"
-msgstr ""
-
-#: woocommerce/cart/cart.php:144
-msgid "Update Cart"
-msgstr ""
-
-#: woocommerce/checkout/payment.php:35
-msgid ""
-"Sorry, it seems that there are no available payment methods for your state. "
-"Please contact us if you require assistance or wish to make alternate "
-"arrangements."
-msgstr ""
-
-#: woocommerce/checkout/payment.php:35
-msgid "Please fill in your details above to see available payment methods."
-msgstr ""
-
-#: woocommerce/checkout/payment.php:42
-msgid ""
-"Since your browser does not support JavaScript, or it is disabled, please "
-"ensure you click the <em>Update Totals</em> button before placing your order."
-" You may be charged more than the amount stated above if you fail to do so."
-msgstr ""
-
-#: woocommerce/checkout/payment.php:43
-msgid "Update totals"
-msgstr ""
-
-#: woocommerce/checkout/form-pay.php:30
-msgid "Qty"
-msgstr ""
-
-#: woocommerce/checkout/form-pay.php:31
-msgid "Totals"
-msgstr ""
-
-#: woocommerce/checkout/form-pay.php:79
-msgid ""
-"Sorry, it seems that there are no available payment methods for your "
-"location. Please contact us if you require assistance or wish to make "
-"alternate arrangements."
-msgstr ""
-
-#: woocommerce/checkout/form-coupon.php:28
-msgid "Have a coupon?"
-msgstr ""
-
-#: woocommerce/checkout/form-coupon.php:28
-msgid "Click here to enter your code"
-msgstr ""
-
-#: woocommerce/global/form-login.php:35
-#: woocommerce/myaccount/form-lost-password.php:30
-msgid "Username or email"
-msgstr ""
-
-#: woocommerce/global/form-login.php:39 woocommerce/myaccount/form-login.php:48
-#: woocommerce/myaccount/form-login.php:98
-msgid "Password"
-msgstr ""
-
-#: woocommerce/global/form-login.php:48 woocommerce/myaccount/form-login.php:37
-#: woocommerce/myaccount/form-login.php:56
-msgid "Login"
-msgstr ""
-
-#: woocommerce/global/form-login.php:51 woocommerce/myaccount/form-login.php:58
-msgid "Remember me"
-msgstr ""
-
-#: woocommerce/global/form-login.php:55 woocommerce/myaccount/form-login.php:62
-msgid "Lost your password?"
-msgstr ""
-
-#: woocommerce/global/quantity-input.php:24
-msgctxt "Product quantity input tooltip"
-msgid "Qty"
-msgstr ""
-
-#: woocommerce/myaccount/form-lost-password.php:27
-msgid ""
-"Lost your password? Please enter your username or email address. You will "
-"receive a link to create a new password via email."
-msgstr ""
-
-#: woocommerce/myaccount/form-lost-password.php:40
-msgid "Reset Password"
-msgstr ""
-
-#: woocommerce/myaccount/form-login.php:44
-msgid "Username or email address"
-msgstr ""
-
-#: woocommerce/myaccount/form-login.php:75
-#: woocommerce/myaccount/form-login.php:112
-msgid "Register"
-msgstr ""
-
-#: woocommerce/myaccount/form-login.php:84
-msgid "Username"
-msgstr ""
-
-#: woocommerce/myaccount/form-login.php:91
-#: woocommerce/myaccount/form-edit-account.php:40
-msgid "Email address"
-msgstr ""
-
-#: woocommerce/myaccount/form-login.php:105
-msgid "Anti-spam"
-msgstr ""
-
-#: woocommerce/myaccount/form-edit-account.php:30
-msgid "First name"
-msgstr ""
-
-#: woocommerce/myaccount/form-edit-account.php:34
-msgid "Last name"
-msgstr ""
-
-#: woocommerce/myaccount/form-edit-account.php:45
-msgid "Password Change"
-msgstr ""
-
-#: woocommerce/myaccount/form-edit-account.php:48
-msgid "Current Password (leave blank to leave unchanged)"
-msgstr ""
-
-#: woocommerce/myaccount/form-edit-account.php:52
-msgid "New Password (leave blank to leave unchanged)"
-msgstr ""
-
-#: woocommerce/myaccount/form-edit-account.php:56
-msgid "Confirm New Password"
-msgstr ""
-
-#: woocommerce/myaccount/form-edit-account.php:66
-msgid "Save changes"
-msgstr ""
-
-#: woocommerce/myaccount/my-orders.php:13
-msgid "Order"
-msgstr ""
-
-#: woocommerce/myaccount/my-orders.php:14
-msgid "Date"
-msgstr ""
-
-#: woocommerce/myaccount/my-orders.php:15
-msgid "Status"
-msgstr ""
-
-#: woocommerce/myaccount/my-orders.php:30
-msgid "Recent Orders"
-msgstr ""
-
-#: woocommerce/myaccount/my-orders.php:55 woocommerce/myaccount/orders.php:51
-msgctxt "hash before order number"
-msgid "#"
-msgstr ""
-
-#: woocommerce/myaccount/my-orders.php:65 woocommerce/myaccount/orders.php:61
-#, php-format
-msgid "%s for %s item"
-msgid_plural "%s for %s items"
-msgstr[0] ""
-msgstr[1] ""
-
-#: woocommerce/myaccount/my-orders.php:72 woocommerce/myaccount/orders.php:68
-msgid "Pay"
-msgstr ""
-
-#: woocommerce/myaccount/my-orders.php:76 woocommerce/myaccount/orders.php:72
-msgid "View"
-msgstr ""
-
-#: woocommerce/myaccount/my-orders.php:80 woocommerce/myaccount/orders.php:76
-msgid "Cancel"
-msgstr ""
-
-#: woocommerce/myaccount/orders.php:107
-msgid "Previous"
-msgstr ""
-
-#: woocommerce/myaccount/orders.php:111
-msgid "Next"
-msgstr ""
-
-#: woocommerce/myaccount/orders.php:119 woocommerce/myaccount/downloads.php:98
-msgid "Go Shop"
-msgstr ""
-
-#: woocommerce/myaccount/orders.php:121
-msgid "No order has been made yet."
-msgstr ""
-
-#: woocommerce/myaccount/form-edit-address.php:23
-msgid "Billing Address"
-msgstr ""
-
-#: woocommerce/myaccount/form-edit-address.php:23
-msgid "Shipping Address"
-msgstr ""
-
-#: woocommerce/myaccount/form-edit-address.php:46
-msgid "Save Address"
-msgstr ""
-
-#: woocommerce/myaccount/form-reset-password.php:27
-msgid "Enter a new password below."
-msgstr ""
-
-#: woocommerce/myaccount/form-reset-password.php:30
-msgid "New password"
-msgstr ""
-
-#: woocommerce/myaccount/form-reset-password.php:34
-msgid "Re-enter new password"
-msgstr ""
-
-#: woocommerce/myaccount/form-reset-password.php:47
-msgid "Save"
-msgstr ""
-
-#: woocommerce/myaccount/downloads.php:59
-msgid "&infin;"
-msgstr ""
-
-#: woocommerce/myaccount/downloads.php:67
-msgid "Never"
-msgstr ""
-
-#: woocommerce/myaccount/downloads.php:75
-msgid "Download"
-msgstr ""
-
-#: woocommerce/myaccount/downloads.php:100
-msgid "No downloads available yet."
-msgstr ""
-
-#: woocommerce/single-product/review-rating.php:28
-#, php-format
-msgid "Rated %d out of 5"
-msgstr ""
-
-#: woocommerce/single-product/review-rating.php:29
-msgid "out of 5"
-msgstr ""
-
-#: woocommerce/single-product/rating.php:36
-#, php-format
-msgid "Rated %s out of 5"
-msgstr ""
-
-#: woocommerce/single-product/rating.php:38
-#, php-format
-msgid "out of %s5%s"
-msgstr ""
-
-#: woocommerce/single-product/rating.php:39
-#, php-format
-msgid "based on %s customer rating"
-msgid_plural "based on %s customer ratings"
-msgstr[0] ""
-msgstr[1] ""
-
-#: woocommerce/single-product/rating.php:42
-#, php-format
-msgid "%s customer review"
-msgid_plural "%s customer reviews"
-msgstr[0] ""
-msgstr[1] ""
-
 #. Name of the theme
 msgid "UnderStrap"
 msgstr ""
@@ -744,9 +406,9 @@ msgid ""
 "starting point for your next theme project and WordPress website. Use it as "
 "starter theme or as a parent theme. It is up to you. Including Font Awesome "
 "support, built-in widget slider and much more you need for basic websites. "
-"IMPORTANT: All developer dependencies are not bundled with this install file."
-" Just download the .zip, extract it and run \"npm install\" and \"gulp copy-"
-"assets\" inside the extracted /understrap folder."
+"IMPORTANT: All developer dependencies are not bundled with this install "
+"file. Just download the .zip, extract it and run \"npm install\" and \"gulp "
+"copy-assets\" inside the extracted /understrap folder."
 msgstr ""
 
 #. Theme URI of the theme
@@ -761,14 +423,3 @@ msgstr ""
 msgid "http://www.holgerkoenemann.de"
 msgstr ""
 
-msgid "Proceed to checkout"
-msgstr ""
-
-msgid "Apply coupon"
-msgstr ""
-
-msgid "Update cart"
-msgstr ""
-
-msgid "Your order"
-msgstr ""
