--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/_s\n"
 "POT-Creation-Date: 2019-03-14 19:39+0100\n"
-"PO-Revision-Date: 2019-03-14 19:40+0100\n"
+"PO-Revision-Date: 2019-04-04 15:45+0200\n"
 "Last-Translator: Mte90 <mte90net@gmail.com>\n"
 "Language-Team: \n"
 "Language: it_IT\n"
@@ -461,7 +461,7 @@ msgid ""
 "marketing. We work on freemium plugin development and website/application "
 "customization."
 msgstr ""
-"La mia <a href=\"https://codeat.co\">Web Agency a Roma</a> e ci occupiamo di "
+"La mia <a href=\"https://codeat.co\">Web Agency a Roma</a> riguardo "
 "WordPress e marketing. Ci occupiamo di sviluppo di plugin freemium e "
 "personalizzazione di siti internet e applicazioni."
 
@@ -479,7 +479,7 @@ msgstr "Titolo"
 
 #: inc/widgets/last-5-reports.php:27
 msgid "Last FOSS reports"
-msgstr "Ultimi 5 resoconti FOSS"
+msgstr "Ultimi resoconti FOSS"
 
 #: inc/widgets/last-5-reports.php:61
 msgid "Archive"
