--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/_s\n"
-"POT-Creation-Date: 2019-11-11 15:25+0100\n"
-"PO-Revision-Date: 2019-11-11 15:26+0100\n"
+"POT-Creation-Date: 2020-03-14 19:39+0100\n"
+"PO-Revision-Date: 2020-03-14 19:41+0100\n"
 "Last-Translator: Mte90 <mte90net@gmail.com>\n"
 "Language-Team: \n"
 "Language: it_IT\n"
@@ -14,7 +14,7 @@ msgstr ""
 "POT-Revision-Date: Mon Jul 04 2016 09:13:18 GMT+0200 (CEST)\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 2.3\n"
 "X-Poedit-KeywordsList: _:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;"
 "__:1;_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;"
 "_x:1,2c;_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;"
@@ -454,11 +454,11 @@ msgstr "Io e me stesso"
 
 #: dist/inc/widgets/about-me.php:36
 msgid ""
-"Full Stack Developer, OpenSource addicted. Involved in WordPress, "
-"ClassicPress and Mozilla projects."
+"Full Stack Developer, OpenSource addicted. Involved in WordPress and Mozilla "
+"projects (a lot)."
 msgstr ""
-"Sviluppatore Full Stack, drogato di OpenSource. Contributor in WordPress, "
-"ClassicPress e progetti Mozilla."
+"Sviluppatore Full Stack, drogato di OpenSource. Contributor in WordPress e "
+"progetti Mozilla (parecchio)."
 
 #: dist/inc/widgets/codeat.php:13 inc/widgets/codeat.php:13
 msgid "Codeat"
@@ -521,7 +521,7 @@ msgstr ""
 "Sembra che non troviamo quello che cerchi. Forse una ricerca può aiutare."
 
 #: dist/loop-templates/content-page.php:30
-#: dist/loop-templates/content-single.php:45 dist/loop-templates/content.php:41
+#: dist/loop-templates/content-single.php:49 dist/loop-templates/content.php:41
 #: loop-templates/content-page.php:30 loop-templates/content-single.php:49
 #: loop-templates/content.php:41
 msgid "Pages:"
@@ -542,6 +542,18 @@ msgstr ""
 "Non ci guadagno anche perché non metto link per acquistarlo. Non è una "
 "recensione professionale!"
 
+#: dist/loop-templates/content-single.php:42
+#: loop-templates/content-single.php:42
+msgid ""
+"I published a free and open source book... about \"Contribute to Open "
+"Source: the right way\"! You can <a href=\"https://daniele.tech/2019/10/"
+"contribute-to-opensource-the-right-way-book/\">download your copy for free</"
+"a> :-D"
+msgstr ""
+"Ho pubblicato un libro gratuito e open source...\"Contribute to Open Source: "
+"the right way\"! Puoi <a href=\"https://daniele.tech/2019/10/contribute-to-"
+"opensource-the-right-way-book/\">scaricare la tua copia gratuitamente</a> :-D"
+
 #: dist/search.php:37 search.php:37
 #, php-format
 msgid "Search Results for: %s"
@@ -558,22 +570,18 @@ msgstr "Cerca &hellip;"
 
 #: inc/widgets/about-me.php:36
 msgid ""
-"Full Stack Developer, OpenSource addicted. Involved in WordPress and Mozilla "
-"projects (a lot)."
+"Full Stack Developer, OpenSource addicted. Involved a lot in WordPress and "
+"Mozilla projects."
 msgstr ""
-"Sviluppatore Full Stack, drogato di OpenSource. Contributor in WordPress e "
-"progetti Mozilla (parecchio)."
+"Sviluppatore Full Stack, drogato di OpenSource. Contributor veterano in "
+"progetti WordPress e Mozilla."
 
-#: loop-templates/content-single.php:42
-msgid ""
-"I published a free and open source book... about \"Contribute to Open "
-"Source: the right way\"! You can <a href=\"https://daniele.tech/2019/10/"
-"contribute-to-opensource-the-right-way-book/\">download your copy for free</"
-"a> :-D"
-msgstr ""
-"Ho pubblicato un libro gratuito e open source...\"Contribute to Open Source: "
-"the right way\"! Puoi <a href=\"https://daniele.tech/2019/10/contribute-to-"
-"opensource-the-right-way-book/\">scaricare la tua copia gratuitamente</a> :-D"
+#~ msgid ""
+#~ "Full Stack Developer, OpenSource addicted. Involved in WordPress, "
+#~ "ClassicPress and Mozilla projects."
+#~ msgstr ""
+#~ "Sviluppatore Full Stack, drogato di OpenSource. Contributor in WordPress, "
+#~ "ClassicPress e progetti Mozilla."
 
 #~ msgid "Most Used Categories"
 #~ msgstr "Categorie più utilizzate"
