--- a/languages/understrap.pot
+++ b/languages/understrap.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/_s\n"
-"POT-Creation-Date: 2020-07-20 12:34+0200\n"
+"POT-Creation-Date: 2020-09-29 12:16+0200\n"
 "POT-Revision-Date: Mon Jul 04 2016 09:13:18 GMT+0200 (CEST)\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Generator: Poedit 2.3.1\n"
+"X-Generator: Poedit 2.4.1\n"
 "X-Poedit-KeywordsList: _:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;"
 "__:1;_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;"
 "_x:1,2c;_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;"
@@ -462,8 +462,8 @@ msgstr ""
 
 #: loop-templates/content-single.php:42
 msgid ""
-"I published a free and open source book... about \"Contribute to Open "
-"Source: the right way\"! You can <a href=\"https://daniele.tech/2020/07/"
+"I published a free and open source book... <b>\"Contribute to Open Source: "
+"the right way\"</b>! You can <a href=\"https://daniele.tech/2020/07/"
 "contribute-to-open-source-the-right-way-2nd-edition-download-the-free-open-"
 "book-now/\">download your copy for free</a> :-D"
 msgstr ""
