--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/_s\n"
-"POT-Creation-Date: 2020-07-20 12:34+0200\n"
-"PO-Revision-Date: 2020-07-20 12:35+0200\n"
+"POT-Creation-Date: 2020-09-29 12:16+0200\n"
+"PO-Revision-Date: 2020-09-29 12:17+0200\n"
 "Last-Translator: Mte90 <mte90net@gmail.com>\n"
 "Language-Team: \n"
 "Language: it_IT\n"
@@ -14,12 +14,12 @@ msgstr ""
 "POT-Revision-Date: Mon Jul 04 2016 09:13:18 GMT+0200 (CEST)\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Generator: Poedit 2.3.1\n"
-"X-Poedit-KeywordsList: _:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;"
-"__:1;_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;"
-"_x:1,2c;_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;"
-"esc_attr__:1;esc_html__:1;esc_attr_e:1;esc_html_e:1;esc_attr_x:1,2c;"
-"esc_html_x:1,2c;comments_number_link:2,3;t:1;st:1;trans:1;transChoice:1,2\n"
+"X-Generator: Poedit 2.4.1\n"
+"X-Poedit-KeywordsList: _:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;__:1;"
+"_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;_x:1,2c;"
+"_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;esc_attr__:1;"
+"esc_html__:1;esc_attr_e:1;esc_html_e:1;esc_attr_x:1,2c;esc_html_x:1,2c;"
+"comments_number_link:2,3;t:1;st:1;trans:1;transChoice:1,2\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SearchPath-0: footer.php\n"
 "X-Poedit-SearchPath-1: header.php\n"
@@ -181,8 +181,8 @@ msgstr ""
 
 #: inc/customizer.php:116
 msgid ""
-"Set sidebar's default position. Can either be: right, left, both or none. "
-"Note: this can be overridden on individual pages."
+"Set sidebar's default position. Can either be: right, left, both or none. Note: "
+"this can be overridden on individual pages."
 msgstr ""
 
 #: inc/customizer.php:124
@@ -457,9 +457,9 @@ msgid ""
 "development. We work on freemium plugin development and website/application "
 "customization."
 msgstr ""
-"La mia <a href=\"https://codeat.co\">Web Agency a Roma</a> riguardo "
-"WordPress. Ci occupiamo di sviluppo di plugin freemium e personalizzazione "
-"di siti internet e applicativi."
+"La mia <a href=\"https://codeat.co\">Web Agency a Roma</a> riguardo WordPress. "
+"Ci occupiamo di sviluppo di plugin freemium e personalizzazione di siti "
+"internet e applicativi."
 
 #: inc/widgets/last-5-reports.php:13
 msgid "Last Reports"
@@ -483,8 +483,7 @@ msgstr "Nessun Risultato"
 
 #: loop-templates/content-none.php:28
 #, php-format
-msgid ""
-"Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
+msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
 msgstr ""
 "Pronto a pubblicare il tuo primo articolo? <a href=\"%1$s\">Inizia qui</a>."
 
@@ -493,15 +492,14 @@ msgid ""
 "Sorry, but nothing matched your search terms. Please try again with some "
 "different keywords."
 msgstr ""
-"Spiacente, ma non ci sono riscontri con i tuoi termini di ricerca. Per "
-"favore riprova con altre parole chiavi."
+"Spiacente, ma non ci sono riscontri con i tuoi termini di ricerca. Per favore "
+"riprova con altre parole chiavi."
 
 #: loop-templates/content-none.php:41
 msgid ""
-"It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps "
-"searching can help."
-msgstr ""
-"Sembra che non troviamo quello che cerchi. Forse una ricerca può aiutare."
+"It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching "
+"can help."
+msgstr "Sembra che non troviamo quello che cerchi. Forse una ricerca può aiutare."
 
 #: loop-templates/content-page.php:30 loop-templates/content-single.php:49
 #: loop-templates/content.php:41
@@ -514,29 +512,29 @@ msgstr "Modifica"
 
 #: loop-templates/content-single.php:36
 msgid ""
-"This is a review of a book that I read and I want to suggest. I am not "
-"getting money of it also because I don't put links of online shops. It is "
-"not a professional review!"
+"This is a review of a book that I read and I want to suggest. I am not getting "
+"money of it also because I don't put links of online shops. It is not a "
+"professional review!"
 msgstr ""
-"Questa é una recensione di un libro che ho letto e che voglio consigliare. "
-"Non ci guadagno anche perché non metto link per acquistarlo. Non è una "
-"recensione professionale!"
+"Questa é una recensione di un libro che ho letto e che voglio consigliare. Non "
+"ci guadagno anche perché non metto link per acquistarlo. Non è una recensione "
+"professionale!"
 
 #: loop-templates/content-single.php:42
 #, fuzzy
 #| msgid ""
 #| "I published a free and open source book... about \"Contribute to Open "
 #| "Source: the right way\"! You can <a href=\"https://daniele.tech/2019/10/"
-#| "contribute-to-opensource-the-right-way-book/\">download your copy for "
-#| "free</a> :-D"
+#| "contribute-to-opensource-the-right-way-book/\">download your copy for free</"
+#| "a> :-D"
 msgid ""
-"I published a free and open source book... about \"Contribute to Open "
-"Source: the right way\"! You can <a href=\"https://daniele.tech/2020/07/"
-"contribute-to-open-source-the-right-way-2nd-edition-download-the-free-open-"
-"book-now/\">download your copy for free</a> :-D"
+"I published a free and open source book... <b>\"Contribute to Open Source: the "
+"right way\"</b>! You can <a href=\"https://daniele.tech/2020/07/contribute-to-"
+"open-source-the-right-way-2nd-edition-download-the-free-open-book-now/"
+"\">download your copy for free</a> :-D"
 msgstr ""
-"Ho pubblicato un libro gratuito e open source...\"Contribute to Open Source: "
-"the right way\"! Puoi <a href=\"https://daniele.tech/2019/10/contribute-to-"
+"Ho pubblicato un libro gratuito e open source...<b>\"Contribute to Open Source: "
+"the right way\"</b>! Puoi <a href=\"https://daniele.tech/2019/10/contribute-to-"
 "opensource-the-right-way-book/\">scaricare la tua copia gratuitamente</a> :-D"
 
 #: search.php:37
@@ -553,11 +551,11 @@ msgid "Search &hellip;"
 msgstr "Cerca &hellip;"
 
 #~ msgid ""
-#~ "Full Stack Developer, OpenSource addicted. Involved in WordPress and "
-#~ "Mozilla projects (a lot)."
+#~ "Full Stack Developer, OpenSource addicted. Involved in WordPress and Mozilla "
+#~ "projects (a lot)."
 #~ msgstr ""
-#~ "Sviluppatore Full Stack, drogato di OpenSource. Contributor in WordPress "
-#~ "e progetti Mozilla (parecchio)."
+#~ "Sviluppatore Full Stack, drogato di OpenSource. Contributor in WordPress e "
+#~ "progetti Mozilla (parecchio)."
 
 #~ msgid ""
 #~ "Full Stack Developer, OpenSource addicted. Involved in WordPress, "
@@ -629,8 +627,8 @@ msgstr "Cerca &hellip;"
 
 #~ msgid ""
 #~ "Combination of Automattic´s _s theme and Bootstrap 4. Made as a solid "
-#~ "starting point for your next theme project and WordPress website. Use it "
-#~ "as starter theme or as parent theme. It is up to you."
+#~ "starting point for your next theme project and WordPress website. Use it as "
+#~ "starter theme or as parent theme. It is up to you."
 #~ msgstr ""
 #~ "Combinazione del tema _s di Automattic con Bootstrap 4. Realizzato come "
 #~ "solido punto di partenza per il tuo prossimo progetto di tema e sito "
