--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -1,12 +1,13 @@
 # Loco Gettext template
+# mte90 <mte90net@gmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/_s\n"
 "POT-Creation-Date: 2020-09-29 12:16+0200\n"
-"PO-Revision-Date: 2020-09-29 12:17+0200\n"
+"PO-Revision-Date: 2021-04-15 11:39+0200\n"
 "Last-Translator: Mte90 <mte90net@gmail.com>\n"
-"Language-Team: \n"
+"Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it_IT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -14,7 +15,7 @@ msgstr ""
 "POT-Revision-Date: Mon Jul 04 2016 09:13:18 GMT+0200 (CEST)\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Generator: Poedit 2.4.1\n"
+"X-Generator: Poedit 2.4.2\n"
 "X-Poedit-KeywordsList: _:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;__:1;"
 "_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;_x:1,2c;"
 "_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;esc_attr__:1;"
@@ -440,8 +441,8 @@ msgid ""
 "Full Stack Developer, OpenSource addicted. Involved a lot in WordPress and "
 "Mozilla projects."
 msgstr ""
-"Sviluppatore Full Stack, drogato di OpenSource. Contributor veterano in "
-"progetti WordPress e Mozilla."
+"Sviluppatore Full Stack, drogato di OpenSource. Contributor veterano WordPress "
+"e Mozilla. Ascolta il mio podcast!"
 
 #: inc/widgets/codeat.php:13
 msgid "Codeat"
@@ -521,7 +522,6 @@ msgstr ""
 "professionale!"
 
 #: loop-templates/content-single.php:42
-#, fuzzy
 #| msgid ""
 #| "I published a free and open source book... about \"Contribute to Open "
 #| "Source: the right way\"! You can <a href=\"https://daniele.tech/2019/10/"
