feat(widget): changed text

--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/_s\n"
-"POT-Creation-Date: 2023-04-27 16:20+0200\n"
-"PO-Revision-Date: 2023-04-27 16:21+0200\n"
+"POT-Creation-Date: 2023-04-27 16:31+0200\n"
+"PO-Revision-Date: 2023-04-27 16:33+0200\n"
 "Last-Translator: Mte90 <mte90net@gmail.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it_IT\n"
@@ -325,11 +325,11 @@ msgstr "Io e me stesso"
 
 #: inc/widgets/about-me.php:36
 msgid ""
-"Full Stack Developer, OpenSource addicted. Involved a lot in WordPress and "
-"Mozilla projects."
+"Full Stack Dev, since 2010 involved in Open Source, mainly in Mozilla and "
+"WordPress projects."
 msgstr ""
-"Sviluppatore Full Stack, drogato di OpenSource. Contributor veterano "
-"WordPress e Mozilla. Ascolta il mio podcast!"
+"Full Stack Dev, dal 2010 coinvolto nell'OpenSource, specialmente Mozilla e "
+"WordPress. Ascolta il mio podcast!"
 
 #: inc/widgets/codeat.php:13
 msgid "Codeat"
@@ -341,13 +341,13 @@ msgstr "La mia azienda"
 
 #: inc/widgets/codeat.php:36
 msgid ""
-"My <a href=\"https://codeat.co\">WebAgency in Rome</a> about WordPress "
-"development. We work on freemium plugin development and website/application "
-"customization."
+"My <a href=\"https://codeat.co\">WebAgency in Rome</a> about Web "
+"consultancy. We produce WP freemium plugins, custom web application but also "
+"performance consultancy for web pages."
 msgstr ""
-"La mia <a href=\"https://codeat.co\">Web Agency a Roma</a> riguardo "
-"WordPress. Ci occupiamo di sviluppo di plugin freemium e personalizzazione "
-"di siti internet e applicativi."
+"La mia <a href=\"https://codeat.co\">Web Agency a Roma</a> per consulenze "
+"Web. Vendiamo plugin freemium per WP, applicaizoni web personalizzati ma "
+"anche consulenza per la prestazione delle pagine web."
 
 #: inc/widgets/last-5-reports.php:13
 msgid "Last Reports"
