fix(languages): italian typo

--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/_s\n"
 "POT-Creation-Date: 2023-04-27 16:31+0200\n"
-"PO-Revision-Date: 2023-04-27 16:33+0200\n"
+"PO-Revision-Date: 2023-05-26 10:48+0200\n"
 "Last-Translator: Mte90 <mte90net@gmail.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it_IT\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "POT-Revision-Date: Mon Jul 04 2016 09:13:18 GMT+0200 (CEST)\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Generator: Poedit 3.2.2\n"
+"X-Generator: Poedit 3.3.1\n"
 "X-Poedit-KeywordsList: _:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;"
 "__:1;_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;"
 "_x:1,2c;_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;"
@@ -346,7 +346,7 @@ msgid ""
 "performance consultancy for web pages."
 msgstr ""
 "La mia <a href=\"https://codeat.co\">Web Agency a Roma</a> per consulenze "
-"Web. Vendiamo plugin freemium per WP, applicaizoni web personalizzati ma "
+"Web. Vendiamo plugin freemium per WP, applicazioni web personalizzati ma "
 "anche consulenza per la prestazione delle pagine web."
 
 #: inc/widgets/last-5-reports.php:13
