fix(language): updated

--- a/languages/understrap.pot
+++ b/languages/understrap.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/_s\n"
-"POT-Creation-Date: 2024-01-19 16:48+0100\n"
+"POT-Creation-Date: 2024-02-29 11:38+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: \n"
@@ -355,7 +355,7 @@ msgid ""
 "<a href=\"https://daniele.tech/2022/09/contribute-to-open-source-the-right-"
 "way-3rd-edition/\">\"Contribute to Open Source: the right way\"</a> is my "
 "free and open source book, about... <i>Open Source</i>!<br>It will help you "
-"to improve your skills or how to understand how to start this journey!"
+"improve your skills and understand how to start this journey!"
 msgstr ""
 
 #: loop-templates/content-single.php:39
