--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/_s\n"
-"POT-Creation-Date: 2024-01-19 16:48+0100\n"
-"PO-Revision-Date: 2024-01-19 16:48+0100\n"
+"POT-Creation-Date: 2024-02-29 11:38+0100\n"
+"PO-Revision-Date: 2024-02-29 11:38+0100\n"
 "Last-Translator: Mte90 <mte90net@gmail.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it_IT\n"
@@ -393,11 +393,18 @@ msgid "Edit"
 msgstr "Modifica"
 
 #: loop-templates/content-single.php:35
+#, fuzzy
+#| msgid ""
+#| "<a href=\"https://daniele.tech/2022/09/contribute-to-open-source-the-"
+#| "right-way-3rd-edition/\">\"Contribute to Open Source: the right way\"</a> "
+#| "is my free and open source book, about... <i>Open Source</i>!<br>It will "
+#| "help you to improve your skills or how to understand how to start this "
+#| "journey!"
 msgid ""
 "<a href=\"https://daniele.tech/2022/09/contribute-to-open-source-the-right-"
 "way-3rd-edition/\">\"Contribute to Open Source: the right way\"</a> is my "
 "free and open source book, about... <i>Open Source</i>!<br>It will help you "
-"to improve your skills or how to understand how to start this journey!"
+"improve your skills and understand how to start this journey!"
 msgstr ""
 "<a href=\"https://daniele.tech/2022/09/contribute-to-open-source-the-right-"
 "way-3rd-edition/\">\"Contribute to Open Source: the right way\"</a> è il mio "
