--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/_s\n"
-"POT-Creation-Date: 2024-02-29 11:38+0100\n"
-"PO-Revision-Date: 2024-02-29 11:38+0100\n"
+"POT-Creation-Date: 2025-03-21 12:30+0100\n"
+"PO-Revision-Date: 2025-03-21 12:31+0100\n"
 "Last-Translator: Mte90 <mte90net@gmail.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it_IT\n"
@@ -15,12 +15,9 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "POT-Revision-Date: Mon Jul 04 2016 09:13:18 GMT+0200 (CEST)\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Generator: Poedit 3.4.2\n"
-"X-Poedit-KeywordsList: _:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;"
-"__:1;_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;"
-"_x:1,2c;_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;"
-"esc_attr__:1;esc_html__:1;esc_attr_e:1;esc_html_e:1;esc_attr_x:1,2c;"
-"esc_html_x:1,2c;comments_number_link:2,3;t:1;st:1;trans:1;transChoice:1,2\n"
+"X-Generator: Poedit 3.5\n"
+"X-Poedit-KeywordsList: "
+"_:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;__:1;_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;_x:1,2c;_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;esc_attr__:1;esc_html__:1;esc_attr_e:1;esc_html_e:1;esc_attr_x:1,2c;esc_html_x:1,2c;comments_number_link:2,3;t:1;st:1;trans:1;transChoice:1,2\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SearchPath-0: footer.php\n"
 "X-Poedit-SearchPath-1: header.php\n"
@@ -317,11 +314,11 @@ msgstr "Io e me stesso"
 
 #: inc/widgets/about-me.php:36
 msgid ""
-"Full Stack Dev, since 2010 involved in Open Source, mainly in Mozilla and "
-"WordPress projects."
+"Full Stack Dev, since 2010 in Open Source, in the past in Mozilla/WordPress "
+"projects. Now Amber-lang and Italian Linux Society."
 msgstr ""
-"Full Stack Dev, dal 2010 coinvolto nell'OpenSource, specialmente Mozilla e "
-"WordPress. Ascolta il mio podcast!"
+"Full Stack Dev, dal 2010 nell'OpenSource, in passato in progetti Mozilla/"
+"WordPress. Ora Amber-Lang e Italian Linux Society."
 
 #: inc/widgets/codeat.php:13
 msgid "Codeat"
@@ -333,13 +330,13 @@ msgstr "La mia azienda"
 
 #: inc/widgets/codeat.php:36
 msgid ""
-"My <a href=\"https://codeat.co\">WebAgency in Rome</a> about Web "
-"consultancy. We produce WP freemium plugins, custom web application but also "
-"performance consultancy for web pages."
+"My <a href=\"https://codeat.co\">Web Agency in Rome</a> about Web "
+"consultancy. We produce WP freemium plugins, custom web applications but "
+"also AI and SAAS development."
 msgstr ""
 "La mia <a href=\"https://codeat.co\">Web Agency a Roma</a> per consulenze "
-"Web. Vendiamo plugin freemium per WP, applicazioni web personalizzati ma "
-"anche consulenza per la prestazione delle pagine web."
+"Web. Realizziamo plugin freemium per WP, applicativi web personalizzati ma "
+"anche sviluppo AI e SAAS."
 
 #: inc/widgets/last-5-reports.php:13
 msgid "Last Reports"
@@ -393,13 +390,6 @@ msgid "Edit"
 msgstr "Modifica"
 
 #: loop-templates/content-single.php:35
-#, fuzzy
-#| msgid ""
-#| "<a href=\"https://daniele.tech/2022/09/contribute-to-open-source-the-"
-#| "right-way-3rd-edition/\">\"Contribute to Open Source: the right way\"</a> "
-#| "is my free and open source book, about... <i>Open Source</i>!<br>It will "
-#| "help you to improve your skills or how to understand how to start this "
-#| "journey!"
 msgid ""
 "<a href=\"https://daniele.tech/2022/09/contribute-to-open-source-the-right-"
 "way-3rd-edition/\">\"Contribute to Open Source: the right way\"</a> is my "
@@ -514,9 +504,9 @@ msgstr "Cerca &hellip;"
 
 #~ msgid ""
 #~ "I published a free and open source book... <b>\"Contribute to Open "
-#~ "Source: the right way\"</b>! You can <a href=\"https://daniele."
-#~ "tech/2022/09/contribute-to-open-source-the-right-way-3rd-edition/"
-#~ "\">download your copy for free</a> :-D"
+#~ "Source: the right way\"</b>! You can <a href=\"https://daniele.tech/"
+#~ "2022/09/contribute-to-open-source-the-right-way-3rd-edition/\">download "
+#~ "your copy for free</a> :-D"
 #~ msgstr ""
 #~ "Ho pubblicato un libro gratuito e open source...<b>\"Contribute to Open "
 #~ "Source: the right way\"</b>! Puoi <a href=\"https://daniele.tech/2022/09/"
