--- a/languages/understrap.pot
+++ b/languages/understrap.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/theme/_s\n"
-"POT-Creation-Date: 2024-02-29 11:38+0100\n"
+"POT-Creation-Date: 2025-03-21 12:30+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: \n"
@@ -13,12 +13,9 @@ msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "POT-Revision-Date: Mon Jul 04 2016 09:13:18 GMT+0200 (CEST)\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Generator: Poedit 3.4.2\n"
-"X-Poedit-KeywordsList: _:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;"
-"__:1;_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;"
-"_x:1,2c;_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;"
-"esc_attr__:1;esc_html__:1;esc_attr_e:1;esc_html_e:1;esc_attr_x:1,2c;"
-"esc_html_x:1,2c;comments_number_link:2,3;t:1;st:1;trans:1;transChoice:1,2\n"
+"X-Generator: Poedit 3.5\n"
+"X-Poedit-KeywordsList: "
+"_:1;gettext:1;dgettext:2;ngettext:1,2;dngettext:2,3;__:1;_e:1;_c:1;_n:1,2;_n_noop:1,2;_nc:1,2;__ngettext:1,2;__ngettext_noop:1,2;_x:1,2c;_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;esc_attr__:1;esc_html__:1;esc_attr_e:1;esc_html_e:1;esc_attr_x:1,2c;esc_html_x:1,2c;comments_number_link:2,3;t:1;st:1;trans:1;transChoice:1,2\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: js\n"
@@ -284,8 +281,8 @@ msgstr ""
 
 #: inc/widgets/about-me.php:36
 msgid ""
-"Full Stack Dev, since 2010 involved in Open Source, mainly in Mozilla and "
-"WordPress projects."
+"Full Stack Dev, since 2010 in Open Source, in the past in Mozilla/WordPress "
+"projects. Now Amber-lang and Italian Linux Society."
 msgstr ""
 
 #: inc/widgets/codeat.php:13
@@ -298,9 +295,9 @@ msgstr ""
 
 #: inc/widgets/codeat.php:36
 msgid ""
-"My <a href=\"https://codeat.co\">WebAgency in Rome</a> about Web "
-"consultancy. We produce WP freemium plugins, custom web application but also "
-"performance consultancy for web pages."
+"My <a href=\"https://codeat.co\">Web Agency in Rome</a> about Web "
+"consultancy. We produce WP freemium plugins, custom web applications but "
+"also AI and SAAS development."
 msgstr ""
 
 #: inc/widgets/last-5-reports.php:13
